<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_map"
        android:icon="@mipmap/map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@mipmap/baseline_local_activity_black_24"
        android:title="@string/title_events" />

    <!--<item-->
        <!--android:id="@+id/navigation_addEvent"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_addEvent" />-->

    <item
        android:id="@+id/navigation_people"
        android:icon="@mipmap/baseline_people_black_24"
        android:title="@string/title_people" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@mipmap/baseline_notifications_black_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/baseline_person_black_24"
        android:title="@string/title_account" />

</menu>
