<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothDevicesActivity">

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_make_me_visible"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/become_visible"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_scan"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@id/btn_make_me_visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/available_devices"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_scan" />

    <ListView
        android:id="@+id/devices_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_devices"/>
</android.support.constraint.ConstraintLayout>